--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-/bower_components/
-/node_modules/
-/.pulp-cache/
-/output/
-/generated-docs/
-/.psc-package/
-/.psc*
-/.purs*
-/.psa*
-/.spago
+# Dependencies
+.psci_modules
+.spago
+bower_components
+node_modules
+
+# Generated files
+.psci
+output
+
+
+.psc-ide-port
+.purs-repl
